--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "dotenv": "^8.2.0",
+    "firebase": "^8.4.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -20,7 +21,6 @@
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -45,5 +45,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
